--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,5 +192,6 @@
         <item>9</item>
         <item>10</item>
     </string-array>
+    <string name="title_activity_etap_perapi_wykonaj">EtapPerapiWykonaj</string>
 
 </resources>
